--- a/themes/child-theme/assets/sass/elements.scss
+++ b/themes/child-theme/assets/sass/elements.scss
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     background: $bg-no-alpha;
     color: $text;
     font-family: $body-font;
