--- a/themes/child-theme/assets/sass/trumps.scss
+++ b/themes/child-theme/assets/sass/trumps.scss
@@ -76,7 +76,7 @@
     display: block;
     width: 100%;
     margin-top: 0;
-    padding: 1rem;
+    padding: 3rem 1rem;
     @include breakpoint(large) {
         display: inline-block;
         width: auto;
@@ -95,7 +95,7 @@
 
     &--post-title {
         @include h1;
-        margin-bottom: .5rem;
+        margin-bottom: 0;
 
         @include breakpoint(large) {
             margin-top: 2rem;
@@ -108,18 +108,30 @@
 .truncated-link {
     @include button-anim;
     margin-top: 1.5rem;
+    margin-left: 1rem;
     padding: 0 .5rem;
     border-bottom: 0 solid transparent;
     font-size: $supplemental-text;
     text-decoration: none;
+    @include breakpoint(large){
+        margin-left: 0;
+    }
 }
 
 .archive-link {
-    margin-top: 3rem;
+    margin-top: 1rem;
+    width: 100vw;
+    text-align: center;
+    padding: 1rem 0;
+    @include breakpoint(large){
+        margin-top: 3rem;
+        width: auto;
+        text-align: left;
+        padding: 0;
+    }
 }
 
 .custom-summary {
-    margin-top: 1rem;
     margin-bottom: 1rem;
     padding: .5rem .75rem;
     @include breakpoint(large){
